haproxy-internal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy1
  namespace: haproxy-demo
spec:
  selector:
    matchLabels:
      app: haproxy1
  replicas: 1
  template:
    metadata:
      labels:
        app: haproxy1
    spec:
      containers:
      - name: haproxy1
        image: haproxytech/haproxy-debian
        ports:
        - containerPort: 80
        volumeMounts:
            - name: haproxy1-conf
              mountPath: /etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
              readOnly: true
      volumes:
      - name: haproxy1-conf
        configMap:
          name: haproxy1-conf
          items:
            - key: haproxy.cfg
              path: haproxy.cfg

---
apiVersion: v1
kind: Service
metadata:
  namespace: haproxy-demo
  name: haproxy1
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30443
  - name: stat
    protocol: TCP
    port: 1024
    targetPort: 1024
    nodePort: 31024
  selector:
    app: haproxy1
