ingress-object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws
  namespace: haproxy-demo
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: ws.mydomain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ws
            port:
              number: 80
